# token-tracker

./: .env.example  .gitignore  ARCHITECTURE_PRESENTATION.html  ARCHITECTURE_PRESENTATION.md  ARCHITECTURE_PRESENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODEX_DIRECTIVES.md  POWERBI_DASHBOARD_DESIGN.html  README.md  RELIABILITY_TEST.md  SCENARIO_PROMPTS.md  pyproject.toml
.claude/agents/: README.md  adapter-specialist.md  analytics-export-engineer.md  collector-storage-engineer.md  context-streaming-engineer.md  core-model-guardian.md  qa-test-runner.md
.codex/: config.toml
.codex/agents/: README.md  analytics-export-auditor.md  analytics-export-auditor.toml  core-accounting-auditor.md  core-accounting-auditor.toml  domain-scorecards.md  domain-scorecards.toml  operating-protocol.md  ops-release-verifier.md  ops-release-verifier.toml  provider-surface-auditor.md  provider-surface-auditor.toml  storage-collector-warden.md  storage-collector-warden.toml  trace-stream-guardian.md  trace-stream-guardian.toml
.github/workflows/: tracker-check.yml
api/: __init__.py  main.py
docs/: AZURE_TEST_MATRIX.md  AZURE_TOMORROW.md  CODEX_TRACKING.md  CODEX_VERIFY_PROMPT.md  CONCEPTS.md  DEMO.md  DEPLOYMENT.md  EXCEL_DASHBOARD.md  ONBOARDING.md  OPENTELEMETRY.md  OPERATIONAL_EVIDENCE.md  OPERATIONAL_RELEASE_EVIDENCE.md  POSIX_OPERATIONS.md  POWERBI_INTEGRATION.md  QUICK_START_TRACKER.md  TRACKER_TEST_GUIDE.md  TRUST_VALIDATION.md  VERIFICATION_REPORT.md
docs/design/: INCREMENTAL_PROJECTION.md
docs/evidence/: COLLECTOR_SUPERVISION_20260714.md  RECOVERY_DRILL_20260715.md  RECOVERY_DRILL_20260716.md  RETENTION_DRILL_20260717.md  SOAK_EVIDENCE_20260720.md
examples/: azure_matrix_family_a.py  azure_matrix_family_b.py  azure_matrix_family_e.py  azure_rag_agent.py  azure_rag_control.py  capture_azure_agent.py  capture_azure_cohere.py  capture_azure_openai.py  capture_azure_openai_responses.py  capture_azure_real_stress.py  capture_bedrock_agent.py  capture_bedrock_converse.py  capture_bedrock_invoke_model.py  capture_bedrock_openai_compat.py  capture_gemini.py  demo.py  demo_trace_azure.py  list_azure_deployments.py  model_prices.template.csv  simulate_all.py  test_foundry_key.py  track_azure_service.py  track_claude_code_usage.py  track_codex_usage.py  verify_operational.py
scripts/: _python.cmd  backup_ledger.py  import_claude_to_collector.py  recovery_drill.py  run_live_dashboard.py  soak_evidence_from_health.py  tt-approve-provider-proof.cmd  tt-azure-demo.cmd  tt-azure-smoke.cmd  tt-backup-task.ps1  tt-backup.cmd  tt-bedrock-cache-smoke.cmd  tt-bedrock-stream-smoke.cmd  tt-check.cmd  tt-claude-import-task-run.ps1  tt-claude-import-task.ps1  tt-claude-import.cmd  tt-codex-interactive.cmd  tt-codex-smoke.cmd  tt-codex-suite.cmd  tt-collector-monitor-task-run.ps1  tt-collector-monitor-task.ps1  tt-collector-monitor.cmd  tt-collector-run.cmd  tt-collector-run.sh  tt-collector-soak.cmd  tt-collector-task-run.ps1  tt-collector-task.ps1  tt-count.cmd  tt-dashboard-task-run.ps1  tt-dashboard-task.ps1  tt-dashboard.cmd  tt-deploy.ps1  tt-doctor-watchdog-task-run.ps1  tt-doctor-watchdog-task.ps1  tt-doctor.cmd  tt-doctor.sh  tt-live-dashboard.cmd  tt-live.cmd  tt-local-auth.ps1  (+12 more)
tests/: __init__.py  _harness.py  run_all.py  test_adapter_contract.py  test_adapter_methods.py  test_adapter_registry.py  test_adapter_stream_all.py  test_additivity_no_double_count.py  test_additivity_table.py  test_agent_bedrock_deep.py  test_agent_descendant_attribution.py  test_agent_metrics_regression.py  test_aggregation_mode_fail_closed.py  test_anomaly_signals.py  test_anthropic_messages_adapter.py  test_api_auth_and_errors.py  test_api_collector.py  test_api_malformed_limits.py  test_api_module_entrypoint.py  test_api_partitioned_store.py  test_api_server_errors.py  test_architecture_hardening.py  test_aws_simulated.py  test_azure_edge_matrix.py  test_azure_limits_fuzz.py  test_azure_openai_adapters.py  test_azure_real_e_and_rag.py  test_azure_real_life_scenarios.py  test_azure_real_matrix.py  test_azure_real_stream_consume.py  test_azure_real_stream_cut.py  test_azure_responses_content_filter.py  test_azure_simulated.py  test_azure_smoke_harness.py  test_bedrock_cache_smoke.py  test_bedrock_converse_adapter.py  test_bedrock_invoke_model_adapter.py  test_bedrock_stream_smoke.py  test_cache_fresh_tokens_regression.py  test_categorization_completeness.py  (+162 more)
tests/fixtures/: anthropic_messages_cache.SIMULATED.json  bedrock_converse_cache.SIMULATED.json  bedrock_invoke_model_headers.SIMULATED.json  gemini_generate_content_thinking.SIMULATED.json  (+2 more)
tests/live/: test_live_openai.py  (+1 more)
tracker/: __init__.py  service.py
(+164 files in other folders)
