[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-token-tracker"
version = "0.1.0"
description = "AI token tracking for GenAI, RAG and agents; source-truth storage with optional presentation-layer cost reporting."
requires-python = ">=3.11"
readme = "README.md"
# Core/runtime depends only on the standard library, openpyxl, and tiktoken.
# Pandas is isolated in the optional reporting extra and is not imported by capture/storage.
# Provider SDKs are used ONLY to capture real test fixtures, never at runtime.
dependencies = ["openpyxl>=3.1", "tiktoken>=0.7"]

[project.scripts]
ai-token-tracker-collector = "api.main:main"
ai-token-tracker-proxy = "tracker.proxy.cli:main"
ai-token-tracker-doctor = "tracker.ops.doctor:main"
ai-token-tracker-retention = "tracker.ops.retention:main"
ai-token-tracker-azure-smoke = "tracker.ops.azure_smoke:main"
ai-token-tracker-bedrock-cache-smoke = "tracker.ops.bedrock_cache_smoke:main"
ai-token-tracker-dashboard = "tracker.reporting.excel_dashboard:main"

[project.optional-dependencies]
# Dev toolchain. Tests are plain runnable scripts under tests/ (no pytest required
# for the local gate); Ruff is the lint gate run by tests/run_all.py.
dev = ["pytest>=8", "ruff>=0.5", "pandas>=2.0"]
reporting = ["pandas>=2.0"]
bedrock = ["boto3>=1.34,<2"]
otel = [
    "opentelemetry-api>=1.30,<2",
    "opentelemetry-sdk>=1.30,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.30,<2",
]

[tool.setuptools.packages.find]
include = ["tracker*", "api*"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP042: converting `class X(str, Enum)` to `StrEnum` silently changes str(X.MEMBER) output
# (StrEnum returns the value; the str+Enum mixin returns "X.MEMBER") — real behavior change
# across a codebase that serializes enum flags widely. Deliberately not auto-applied.
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
# One DAX measure formula embedded in a triple-quoted template string exceeds line-length;
# wrapping it would insert a literal newline into the generated Power BI formula text.
"tracker/export/powerbi_exporter.py" = ["E501"]

[tool.pytest.ini_options]
# Kept for when pytest is available. In this environment tests run as scripts:
#   python tests/test_<name>.py
testpaths = ["tests"]
python_files = ["test_*.py"]
